# cudnn_scope

./: .gitignore  CMakeLists.txt  README.md  cudnn_scopeConfig.cmake  sugar.cmake
add_scripts/: run_benchmarks.sh  run_benchmarks_profile.sh  run_mobilenetv2_benchmarks.sh  run_resnet50_benchmarks.sh
cmake/: sugar.cmake
cmake/modules/: FindCUPTI.cmake  sugar.cmake
docs/: sugar.cmake
scripts/: run.sh  run_all_low_prec.sh  run_benchmarks.sh  run_benchmarks_low_prec.sh  run_benchmarks_low_prec_nhwc_layout.sh  run_benchmarks_low_prec_padded.sh  run_benchmarks_low_prec_padded_nhwc_layout.sh  run_benchmarks_low_prec_profile.sh  run_benchmarks_profile.sh  run_mobilenetv2_benchmarks.sh  run_resnet50_benchmarks.sh
setup/: gpu_boost.sh  scaling_governor.sh  setup.sh
src/: activation_bwd.cpp  activation_fwd.cpp  args.hpp  batchnorm_bwd.cpp  batchnorm_fwd.cpp  c_api.h  conv_bias_activation_fwd.cpp  conv_bwd_bias.cpp  conv_bwd_data.cpp  conv_bwd_filter.cpp  conv_fwd.cpp  cublas_gemm_bwd.cpp  cublas_gemm_fwd.cpp  cublas_gemv_bwd.cpp  cublas_gemv_fwd.cpp  cudnn_activation_bwd.cpp  cudnn_activation_fwd.cpp  cudnn_add_tensor.cpp  cudnn_batchnorm_bwd.cpp  cudnn_batchnorm_fwd.cpp  cudnn_conv_bias_activation_fwd.cpp  cudnn_conv_bias_activation_fwd.inc  cudnn_conv_bias_activation_fwd_0.cpp  cudnn_conv_bias_activation_fwd_1.cpp  cudnn_conv_bias_activation_fwd_2.cpp  cudnn_conv_bias_activation_fwd_3.cpp  cudnn_conv_bias_activation_fwd_4.cpp  cudnn_conv_bias_activation_fwd_5.cpp  cudnn_conv_bias_activation_fwd_6.cpp  cudnn_conv_bias_activation_fwd_7.cpp  cudnn_conv_bias_activation_fwd_8.cpp  cudnn_conv_bias_activation_fwd_9.cpp  cudnn_conv_bwd_bias.cpp  cudnn_conv_bwd_data.cpp  cudnn_conv_bwd_filter.cpp  cudnn_conv_fwd.cpp  cudnn_conv_fwd.inc  cudnn_conv_fwd_0.cpp  cudnn_conv_fwd_1.cpp  cudnn_conv_fwd_2.cpp  (+26 more)
src/dlperf/: generated_add_benchmarks_1.hpp  generated_add_benchmarks_1024.hpp  generated_add_benchmarks_128.hpp  generated_add_benchmarks_16.hpp  generated_add_benchmarks_2.hpp  generated_add_benchmarks_256.hpp  generated_add_benchmarks_32.hpp  generated_add_benchmarks_4.hpp  generated_add_benchmarks_512.hpp  generated_add_benchmarks_64.hpp  generated_add_benchmarks_8.hpp  generated_benchmarks_1.hpp  generated_benchmarks_1024.hpp  generated_benchmarks_128.hpp  generated_benchmarks_16.hpp  generated_benchmarks_2.hpp  generated_benchmarks_256.hpp  generated_benchmarks_32.hpp  generated_benchmarks_4.hpp  generated_benchmarks_512.hpp  generated_benchmarks_64.hpp  generated_benchmarks_8.hpp  generated_mobilenetv2_benchmarks_1.hpp  generated_mobilenetv2_benchmarks_1024.hpp  generated_mobilenetv2_benchmarks_128.hpp  generated_mobilenetv2_benchmarks_16.hpp  generated_mobilenetv2_benchmarks_2.hpp  generated_mobilenetv2_benchmarks_256.hpp  generated_mobilenetv2_benchmarks_32.hpp  generated_mobilenetv2_benchmarks_4.hpp  generated_mobilenetv2_benchmarks_512.hpp  generated_mobilenetv2_benchmarks_64.hpp  generated_mobilenetv2_benchmarks_8.hpp  generated_profile_benchmarks_1.hpp  generated_profile_benchmarks_1024.hpp  generated_profile_benchmarks_128.hpp  generated_profile_benchmarks_16.hpp  generated_profile_benchmarks_2.hpp  generated_profile_benchmarks_256.hpp  generated_profile_benchmarks_32.hpp  (+38 more)
src/layer/: init.cpp  sugar.cmake
